# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  cli.py  file_reader.py  generate_diff.py  linkage_gendiff.py  parser.py
gendiff/formats/: JSON.py  format_selector.py  json.py  plain.py  renderer.py  stylish.py  stylish_json.py
gendiff/scripts/: cli.py  file_reader.py  gendiff.py  parser.py
gendiff/templates/: stylish_json.py
tests/: gendiff_test.py  json_test.py  test_json.py
tests/fixtures/: json_nested  verification.py
